<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_card">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/coinContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/default_20dp"
                android:layout_marginStart="@dimen/default_20dp"
                android:layout_marginEnd="@dimen/default_20dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/default_50dp"
                    android:layout_height="@dimen/default_50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/default_icon"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:paddingEnd="@dimen/default_8dp"
                            android:paddingStart="0dp"
                            android:textSize="@dimen/default_18_sp"/>

                        <TextView
                            android:id="@+id/symbol"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/default_16_sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/priceText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:paddingEnd="@dimen/default_8dp"
                            android:paddingStart="0dp"
                            android:textSize="@dimen/default_12_sp"
                            android:textColor="@color/black"
                            android:text="@string/price"/>

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/default_12_sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/marketCapText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:paddingEnd="@dimen/default_8dp"
                            android:paddingStart="0dp"
                            android:textSize="@dimen/default_12_sp"
                            android:textColor="@color/black"
                            android:text="@string/market_cap"/>

                        <TextView
                            android:id="@+id/marketCap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/default_12_sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_20dp"
                android:paddingStart="@dimen/default_20dp"
                android:paddingEnd="@dimen/default_20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coinContent"
                app:layout_constraintBottom_toTopOf="@id/line"
                android:textColor="@color/hint_text"
                android:textSize="@dimen/default_14_sp"
                android:background="@color/white"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                android:background="@color/grey"/>

            <Button
                android:id="@+id/goToButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_50dp"
                android:background="@color/white"
                android:text="@string/go_to_website"
                android:textColor="#2196F3"
                android:textSize="@dimen/default_14_sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/line" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>